[tool.poetry]
name = "lora"
version = "0.1.0"
description = ""
authors = ["MLOpsEngineer <sys@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
numpy = "^2.1.2"
torchao = "^0.5.0"
torchtune = "^0.3.1"
transformers = "^4.45.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
